# GoSmartCalc

./: .gitignore  README.md  go.mod  main  main.go
cc/: CMakeLists.txt
cc/core/: basic_calc.cc  basic_calc.h  credit_calc.cc  credit_calc.h  deposit_calc.cc  deposit_calc.h
cmd/SmartCalc/: main.go
internal/calc/: basic.go  credit.go  deposit.go
internal/calc/basic/: basic.go
internal/calc/cc/: CMakeLists.txt  api.h  basic_calc.c  basic_calc.h  credit_calc.c  credit_calc.h  defs.h  deposit_calc.c  deposit_calc.h
internal/calc/cc/core/: basic_calc.cc  basic_calc.h  calc_api.h  credit_calc.cc  defs.h  deposit_calc.h
internal/calc/cc/util/: date.h  math_operation.h  stack.h  stack_double.c  stack_double.h  stack_operation.c  stack_operation.h  str_util.c  str_util.h  vector.h
internal/calc/credit/: credit.go
internal/calc/deposit/: deposit.go
pkg/basic/: basic.go
pkg/cconv/: cconv.go
pkg/core/basic/: basic.go
pkg/core/credit/: credit.go
pkg/core/deposit/: deposit.go
pkg/core/dll/: dll.go  unix.go  windows.go
pkg/credit/: credit.go
pkg/deposit/: deposit.go
pkg/dll/: dll.go  dll_unix.go  dll_windows.go
pkg/util/: util.go
